# accumulatorplus

./: .travis.yml  CMakeLists.txt  README.md
include/: circular_time_buffer.h  rolling_comp.h  rolling_max.h  rolling_min.h  rolling_prev.h  rolling_time_max.h  rolling_time_mean.h  rolling_time_min.h  rolling_time_moment.h  rolling_time_sum.h  rolling_time_window.h  rolling_timestamp_comp.h  rolling_timestamp_count.h  rolling_timestamp_max.h  rolling_timestamp_mean.h  rolling_timestamp_min.h  rolling_timestamp_moment.h  rolling_timestamp_prev.h  rolling_timestamp_std.h  rolling_timestamp_sum.h  rolling_timestamp_window.h  timestampacc.h  zxings.h
tests/: AccumulatorPlusTests.cpp  AccumulatorTests.cpp  CircularBufferTest.cpp
